fix: add missing dlq alarms

--- a/serverless.yml
+++ b/serverless.yml
@@ -319,13 +319,13 @@ resources:
         Value: 
           Ref: ProcessUploadSnsTopic
 
-    Alarm:
+    TranscodeWebDLQAlarm:
       Type: AWS::CloudWatch::Alarm
       Condition: CreateCloudWatchAlarm
       Properties:
         ActionsEnabled: true
         AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscodeWebDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed upload jobs greater than zero'
+        AlarmDescription: 'Number of failed transcode-web jobs greater than zero'
         Namespace: 'AWS/SQS'
         Statistic: 'Sum'
         MetricName: 'ApproximateNumberOfMessagesVisible'
@@ -337,6 +337,50 @@ resources:
         Dimensions:
           - Name: QueueName
             Value: ${self:resources.Resources.TranscodeWebDLQ.Properties.QueueName}
+        AlarmActions:
+          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
+        OKActions:
+          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
+    TranscodeMobileDLQAlarm:
+      Type: AWS::CloudWatch::Alarm
+      Condition: CreateCloudWatchAlarm
+      Properties:
+        ActionsEnabled: true
+        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscodeMobileDLQ.Properties.QueueName}'
+        AlarmDescription: 'Number of failed transcode-mobile jobs greater than zero'
+        Namespace: 'AWS/SQS'
+        Statistic: 'Sum'
+        MetricName: 'ApproximateNumberOfMessagesVisible'
+        ComparisonOperator: 'GreaterThanThreshold'
+        EvaluationPeriods: 1
+        Period: 300 # 5 minutes in seconds
+        Threshold: 0
+        TreatMissingData: 'notBreaching'
+        Dimensions:
+          - Name: QueueName
+            Value: ${self:resources.Resources.TranscodeMobileDLQ.Properties.QueueName}
+        AlarmActions:
+          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
+        OKActions:
+          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
+    TranscribeDLQAlarm:
+      Type: AWS::CloudWatch::Alarm
+      Condition: CreateCloudWatchAlarm
+      Properties:
+        ActionsEnabled: true
+        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscribeDLQ.Properties.QueueName}'
+        AlarmDescription: 'Number of failed transcribe-answer jobs greater than zero'
+        Namespace: 'AWS/SQS'
+        Statistic: 'Sum'
+        MetricName: 'ApproximateNumberOfMessagesVisible'
+        ComparisonOperator: 'GreaterThanThreshold'
+        EvaluationPeriods: 1
+        Period: 300 # 5 minutes in seconds
+        Threshold: 0
+        TreatMissingData: 'notBreaching'
+        Dimensions:
+          - Name: QueueName
+            Value: ${self:resources.Resources.TranscribeDLQ.Properties.QueueName}
         AlarmActions:
           - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
         OKActions:
