--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "git+https://github.com/mentorpal/mentor-upload.git"
   },
+  "engines": {
+    "node": ">=16.13.0 <17"
+  },
   "keywords": [
     "sqs",
     "sns",
