--- a/serverless.yml
+++ b/serverless.yml
@@ -102,6 +102,7 @@ provider:
           Action:
             - "s3:PutObject"
             - "s3:GetObject"
+            - "s3:ListBucket"
           Resource:
             - '${self:custom.stages.${self:provider.stage}.S3_STATIC_ARN}/*'
             - 'arn:aws:s3:::${self:provider.environment.TRANSCRIBE_INPUT_BUCKET}/*'
