add missing tool

--- a/cicd/buildspec.yml
+++ b/cicd/buildspec.yml
@@ -10,6 +10,10 @@ phases:
     runtime-versions:
       nodejs: 14
     commands:
+      - pyenv global $PYTHON_38_VERSION
+      - python3 -m venv /root/venv
+      - . /root/venv/bin/activate
+      - pip3 install flake8
       - n 16 # workaround https://github.com/aws/aws-codebuild-docker-images/issues/490
       - NODE_ENV=dev npm ci
 
