--- a/cicd/deployspec_prod.yml
+++ b/cicd/deployspec_prod.yml
@@ -18,7 +18,7 @@ phases:
   build:
     commands:
       - echo Deploying stack
-      - npm run deploy -- -s prod --region us-west-2
+      - npm run deploy:prod
 
       # TODO
       # - echo sentry release: ${SENTRY_RELEASE}
