--- a/cicd/deployspec_staging.yml
+++ b/cicd/deployspec_staging.yml
@@ -18,7 +18,7 @@ phases:
   build:
     commands:
       - echo Deploying stack
-      - npm run deploy -- -s qa --region us-east-1
+      - npm run deploy:qa
 
       # TODO
       # - echo sentry release: ${SENTRY_RELEASE}
