--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "devDependencies": {
     "serverless": "^2.72.1",
     "serverless-deployment-bucket": "^1.5.1",
+    "serverless-domain-manager": "^6.0.3",
     "serverless-layers": "^2.5.1",
     "serverless-offline": "^8.3.1"
   },
   "scripts": {
-    "deploy:dev": "sls deploy -s dev",
+    "deploy:dev": "sls deploy -s dev --region us-east-1",
     "deploy:qa": "sls deploy -s qa --region us-east-1",
     "deploy:prod": "sls deploy -s prod --region us-west-2"
   },
