--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 boto3_type_annotations>=0.3.1
 ffmpy==0.3.0
+jsonschema==4.4.0
+pyjwt==2.3.0
 pymediainfo==5.1.0
 pymongo[srv]==3.12.0
 python-dotenv==0.19.0
