--- a/serverless.yml
+++ b/serverless.yml
@@ -133,7 +133,8 @@ provider:
     SENTRY_DSN_MENTOR_UPLOAD: '${ssm:/mentorpal/upload/sentry_dsn}'
     TRANSCRIBE_INPUT_BUCKET: '${self:service}-transcribe-input-${self:provider.stage}'
     TRANSCRIBE_OUTPUT_BUCKET: '${self:service}-transcribe-output-${self:provider.stage}'
-
+    SIGNED_UPLOAD_BUCKET: '${self:service}-signed-upload-${self:provider.stage}'
+  
   # iam permissions for all lambda functions
   iam:
     role:
@@ -142,11 +143,19 @@ provider:
           Action:
             - "s3:PutObject"
             - "s3:GetObject"
-            - "s3:ListBucket"
           Resource:
             - '${self:custom.stages.${self:provider.stage}.S3_STATIC_ARN}/*'
             - 'arn:aws:s3:::${self:provider.environment.TRANSCRIBE_INPUT_BUCKET}/*'
             - 'arn:aws:s3:::${self:provider.environment.TRANSCRIBE_OUTPUT_BUCKET}/*'
+            - 'arn:aws:s3:::${self:provider.environment.SIGNED_UPLOAD_BUCKET}/*'
+        - Effect: "Allow"
+          Action:
+            - "s3:ListBucket"
+          Resource:
+            - '${self:custom.stages.${self:provider.stage}.S3_STATIC_ARN}'
+            - 'arn:aws:s3:::${self:provider.environment.TRANSCRIBE_INPUT_BUCKET}'
+            - 'arn:aws:s3:::${self:provider.environment.TRANSCRIBE_OUTPUT_BUCKET}'
+            - 'arn:aws:s3:::${self:provider.environment.SIGNED_UPLOAD_BUCKET}'
         - Effect: Allow
           Action:
           - "transcribe:StartTranscriptionJob"
@@ -158,6 +167,11 @@ provider:
             - dynamodb:UpdateItem
           Resource:
             Fn::GetAtt: [JobsTable, Arn]
+        - Effect: "Allow"
+          Action:
+            - sns:Publish
+          Resource:
+            Ref: ProcessUploadSnsTopic
 
 package:
 #  individually: false
@@ -200,6 +214,7 @@ functions:
       - http:
           path: /thumbnail
           method: post
+          cors: true
           authorizer:
             name: authorizer_func
             resultTtlInSeconds: 300
@@ -216,6 +231,7 @@ functions:
       - http:
           path: /transfer/mentor
           method: post
+          cors: true
           authorizer:
             name: authorizer_func
             resultTtlInSeconds: 300
@@ -232,6 +248,7 @@ functions:
       - http:
           path: /transfer/status/{id}
           method: get
+          cors: true
           authorizer:
             name: authorizer_func
             resultTtlInSeconds: 300
@@ -259,23 +276,42 @@ functions:
           filterPatterns:
             - eventName: [INSERT]
 
-  # http_answer_upload:
-  #   handler: answer-upload.handler
-  #   memorySize: 4096
-  #   timeout: 30 # 30sec is max for http requests
-  #   events:
-  #     - http:
-  #         path: /answer
-  #         method: post
-  #         authorizer: 
-  #           name: authorizer_func
-  #           resultTtlInSeconds: 300
-  #           identitySource: method.request.header.Authorization
-  #           type: token
-  #   layers:
-  #     # binaries gets named "Binaries"+"LambdaLayer":
-  #     # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
-  #     - { Ref: BinariesLambdaLayer }
+  http_upload_url:
+    handler: upload-url.handler
+    memorySize: 256
+    timeout: 10
+    events:
+      - http:
+          path: /upload/url
+          method: get
+          cors: true
+          authorizer:
+            name: authorizer_func
+            resultTtlInSeconds: 300
+            identitySource: method.request.header.Authorization
+            type: token
+
+  http_answer_upload:
+    handler: answer-upload.handler
+    memorySize: 4096
+    timeout: 30 # 30sec is max for http requests
+    environment:
+      UPLOAD_SNS_ARN:
+        Ref: ProcessUploadSnsTopic
+    events:
+      - http:
+          path: /upload/answer
+          method: post
+          cors: true
+          authorizer: 
+            name: authorizer_func
+            resultTtlInSeconds: 300
+            identitySource: method.request.header.Authorization
+            type: token
+    layers:
+      # binaries gets named "Binaries"+"LambdaLayer":
+      # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
+      - { Ref: BinariesLambdaLayer }
   
   answer-transcode-web:
     handler: answer-transcode-web.handler
@@ -416,7 +452,7 @@ resources:
           - Protocol: sqs
             Endpoint: 
               Fn::GetAtt: [TranscribeQueue, Arn]
-
+  # TODO remove
     SnsPublishPolicy:
       Type: AWS::SNS::TopicPolicy
       Properties:
@@ -483,6 +519,7 @@ resources:
             Status: Enabled
             ExpirationInDays: 7
 
+  # TODO remove
     ProcessUploadSnsTopicArn:
       Type: AWS::SSM::Parameter
       Properties:
@@ -577,6 +614,26 @@ resources:
         TimeToLiveSpecification: 
           AttributeName: ttl
           Enabled: true
+
+    SignedUploadBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:provider.environment.SIGNED_UPLOAD_BUCKET}
+        # videos are processed and uploaded to STATIC_S3 so clean them up:
+        LifecycleConfiguration:
+          Rules:
+          - Id: DeleteResultAfter7Days
+            Status: Enabled
+            ExpirationInDays: 30
+        CorsConfiguration:
+          CorsRules:
+            - AllowedMethods:
+                - PUT
+                - POST
+              AllowedOrigins:
+                - '*'
+              AllowedHeaders:
+                - '*'
 
   Outputs:
     ProcessUploadSnsTopicName:
